fix #10: 리뷰 반영
 - MatzipSummaryResponse에서 Reponse 오타 수정
 - MatzipSummaryResponse 거리 계산 dto 내부에서 호출 하도록 수정
 - 일부 파일 마지막 빈 줄 추가
 - 안 쓰는 import나 코드 제거